<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/filter"
        app:showAsAction="always|withText"
        android:title="@string/filter">

        <menu>
            <item android:id="@+id/filter_texas"
                app:showAsAction="ifRoom"
                android:title="TX" />
            <item android:id="@+id/filter_new_york"
                app:showAsAction="ifRoom"
                android:title="NY" />
            <item android:id="@+id/filter_washington"
                app:showAsAction="ifRoom"
                android:title="WA" />
            <item android:id="@+id/filter_none"
                app:showAsAction="ifRoom"
                android:title="None" />
        </menu>
    </item>
</menu>